@@ -1,4 +1,4 @@
-.\"	$NetBSD: ubsec.4,v 1.4 2004/04/29 19:42:29 jonathan Exp $
+.\"	$NetBSD: ubsec.4,v 1.5 2014/04/19 12:29:24 bad Exp $
 .\"	$FreeBSD: src/share/man/man4/ubsec.4,v 1.1.2.1 2002/11/21 23:57:24 sam Exp $
 .\"	$OpenBSD: ubsec.4,v 1.26 2003/09/03 15:55:41 jason Exp $
 .\"
@@ -26,7 +26,7 @@
 .\" ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE
 .\" POSSIBILITY OF SUCH DAMAGE.
 .\"
-.Dd June 10, 2000
+.Dd April 19, 2014
 .Dt UBSEC 4
 .Os
 .Sh NAME
@@ -43,9 +43,6 @@ driver supports cards containing any of the following chips:
 The original chipset, no longer made.
 This extremely rare unit
 was not very fast, lacked an RNG, and had a number of other bugs.
-.It Bluesteel 5601
-A faster and fixed version of the original, with a random number
-unit and large number engine added.
 .It Broadcom BCM5801
 A BCM5805 without public key engine or random number generator.
 .It Broadcom BCM5802
@@ -56,13 +53,19 @@ Faster version of Bluesteel 5601.
 64 bit version of the chip, and significantly more advanced.
 .It Broadcom BCM5821
 Faster version of the BCM5820.
-(This is the chip found on the Sun Crypto Accelerator 1000.)
+This is the chip found on the Sun Crypto Accelerator 1000.
 .It Broadcom BCM5822
 Faster version of the BCM5820.
 .It Broadcom BCM5823
-Faster version of the BCM5822.
-.It Broadcom BCM5823
-Faster version of the BCM5821, with AES hardware.
+Faster version of the BCM5822 that also supports AES.
+.It Broadcom BCM5825
+Faster PCI Express or PCI-X version of the chip.
+.It Broadcom BCM5860
+IPSec/SSL Security Processor that is faster and has more features.
+.It Broadcom BCM5861
+Faster version of the BCM5860.
+.It Broadcom BCM5862
+Faster version of the BCM5861.
 .El
 .Pp
 The
@@ -74,6 +77,7 @@ and thus for
 .Xr fast_ipsec 4
 and
 .Xr crypto 4 .
+The driver also supports acceleration of AES-CBC with the BCM5823 or newer.
 .Pp
 On those models which contain a public key engine (almost all of the
 more recent ones), this feature is registered with the
@@ -105,5 +109,3 @@ and subsequently imported to
 .Nx 2.0 .
 .Sh BUGS
 The BCM5801 and BCM5802 have not actually been tested.
-.Pp
-Whilst some of the newer chips support AES, AES is not supported by the driver.
